<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="header_name">Music</string>

    <string name="song_playing">Playing Now</string>
    <string name="song_album">Albums</string>
    <string name="song_artists">Artists</string>
    <string name="song_favorites">Favorites</string>
    <string name="song_playlist">Playlists</string>
    <string name="song_equalizer">Sound Equalizer</string>

     <string name="drawer_open">Open Navigation Drawer</string>
     <string name="drawer_closed">Close Navigation Drawer</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="enabled">Enabled</string>
    <string name="ok">gurpreet</string>


</resources>
